--- a/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM.csproj
+++ b/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM.csproj
@@ -24,7 +24,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -79,7 +79,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Lisys\Lisys-0.6.4-src\Release\CLW.dll</HintPath>
     </Reference>
-    <Reference Include="DelFEM4Net">
+    <Reference Include="DelFEM4Net, Version=1.0.0.2, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\C++\DelFEM4Net\DelFEM4Net\Release\DelFEM4Net.dll</HintPath>
     </Reference>
     <Reference Include="GSLW, Version=0.6.4.0, Culture=neutral, processorArchitecture=x86">
@@ -88,6 +89,7 @@
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -130,6 +132,7 @@
     <Compile Include="ColorMap.cs" />
     <Compile Include="CommandManager.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="DelFEMLsUtil.cs" />
     <Compile Include="EdgeCollection.cs" />
     <Compile Include="FemElement.cs" />
     <Compile Include="FemLineElement.cs" />
@@ -151,6 +154,12 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ErrorLogFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ErrorLogFrm.Designer.cs">
+      <DependentUpon>ErrorLogFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="MeshViewFrm.cs">
       <SubType>Form</SubType>
@@ -174,6 +183,9 @@
     <Compile Include="WinAPI.cs" />
     <EmbeddedResource Include="CalcSettingFrm.resx">
       <DependentUpon>CalcSettingFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ErrorLogFrm.resx">
+      <DependentUpon>ErrorLogFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
