HPlaneWGSimulator x DelFEM version 1.0.0.2 PCOCGの求解処理をDelFEMの機能をより多く使用し、計算速度を改善しました。Version1.2.0.1が最速かな と思っていましたがversion1.2.0.2は同等かそれ以上になっていると思います。 また、従来のzgesvによる解法の処理も素の”HPlaneWGSimulator”で対応した処理を組み込んで特にメモリの 確保処理を改善しています。

--- a/src/Lisys/Lisys-0.6.4-src/CLW/CLW.vcxproj
+++ b/src/Lisys/Lisys-0.6.4-src/CLW/CLW.vcxproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <ClInclude Include="Checker.h" />
     <ClInclude Include="CLW.h" />
+    <ClInclude Include="CLW_Added.h" />
     <ClInclude Include="Exceptions.h" />
     <ClInclude Include="f2cCanceller.h" />
     <ClInclude Include="Stdafx.h" />
