--- a/src/Lisys/Lisys-0.6.4-src/CLW/CLW.vcxproj.filters
+++ b/src/Lisys/Lisys-0.6.4-src/CLW/CLW.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Stdafx.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="CLW_Added.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
