--- a/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM.csproj
+++ b/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM.csproj
@@ -24,7 +24,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.6.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -255,6 +255,7 @@
   <ItemGroup>
     <Content Include="HPlaneWGSimulatorXDelFEM.ico" />
     <Content Include="ReleaseNotes.txt" />
+    <None Include="Resources\パーツ移動.png" />
     <None Include="Resources\自動計算.png" />
     <None Include="Resources\delfem_logo48x.png" />
     <None Include="Resources\図形作成.png" />
